<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_TestSuite" Id="{13d3f096-dc15-407c-bd1a-874a6ea7d8e4}">
    <Declaration><![CDATA[TYPE ST_TestSuite :
STRUCT
	NumberOfTests : UINT;
	TestNames : ARRAY[0..100] OF T_MaxString;
	TestSuiteRunState : E_TestSuiteRunState := E_TestSuiteRunState.IDLE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>